Fix overflow when insert input to search in search box

--- a/src/components/Layout/components/Search/Search.module.scss
+++ b/src/components/Layout/components/Search/Search.module.scss
@@ -1,4 +1,3 @@
-
 .search,
 .search-result {
     width: 361px;
@@ -15,6 +14,7 @@
     input {
         flex: 1;
         height: 100%;
+        padding-right: 40px;
         color: var(--black);
         font-size: 1.6rem;
         caret-color: var(--primary);
@@ -54,18 +54,17 @@
     // transform: translateY(-50%);
     color: rgba(22, 24, 35, 0.34);
 }
-.clear{
-        transform: translateY(-50%);
+.clear {
+    transform: translateY(-50%);
 }
-.loading{
-animation: spinner 0.8s linear infinite;
+.loading {
+    animation: spinner 0.8s linear infinite;
 }
-@keyframes spinner{
-    from{
-        transform:translateY(-50%) rotate(0);
-
+@keyframes spinner {
+    from {
+        transform: translateY(-50%) rotate(0);
     }
-    to{
+    to {
         transform: translateY(-50%) rotate(360deg);
     }
 }
